--- a/form.css
+++ b/form.css
@@ -9,11 +9,6 @@ body {
     font-family: 'Montserrat', Arial, Helvetica, sans-serif;
 }
 
-h1 {
-    color: white;
-    text-align: center;
-}
-
 #feedback-page {
     text-align: center;
 }
@@ -30,15 +25,14 @@ h1 {
     padding-right: 35px;
     padding-top: 35px;
     padding-bottom: 50px;
-    width: 1000px;
+    width: 450px;
     float: left;
     left: 50%;
     position: absolute;
-    margin-top: 180px;
-    align-content: center;
-    margin-left: -560px;
+    margin-top: 30px;
+    margin-left: -260px;
     border-radius: 7px;
-
+    text-align: center;
 }
 
 .montform .feedback-input {
@@ -65,7 +59,38 @@ h1 {
     padding: 13px 13px 13px 54px;
 }
 
+/* Icons ---------------------------------- */
+.montform #name {
+    background-image: url(https://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/svgs/fi-address-book.svg);
+    background-size: 30px 30px;
+    background-position: 11px 8px;
+    background-repeat: no-repeat;
+}
+
+.montform #name:focus {
+    background-image: url(https://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/svgs/fi-address-book.svg);
+    background-size: 30px 30px;
+    background-position: 8px 5px;
+    background-position: 11px 8px;
+    background-repeat: no-repeat;
+}
+
+.montform #email {
+    background-image: url(https://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/svgs/fi-mail.svg);
+    background-size: 30px 30px;
+    background-position: 11px 8px;
+    background-repeat: no-repeat;
+}
+
+.montform #email:focus {
+    background-image: url(https://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/svgs/fi-mail.svg);
+    background-size: 30px 30px;
+    background-position: 11px 8px;
+    background-repeat: no-repeat;
+}
+
 .montform #comment {
+    background-image: url(https://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/svgs/fi-pencil.svg);
     background-size: 30px 30px;
     background-position: 11px 8px;
     background-repeat: no-repeat;
@@ -73,7 +98,7 @@ h1 {
 
 .montform textarea {
     width: 100%;
-    height: 350px;
+    height: 150px;
     line-height: 150%;
     resize: vertical;
 }
@@ -130,6 +155,11 @@ h1 {
         margin-left: 0;
         padding-left: 3%;
         padding-right: 3%;
+        text-align: center;
     }
+}
+
+h1 {
+    color: white;
 }
 
