Pre final version

--- a/css/results.css
+++ b/css/results.css
@@ -8,9 +8,26 @@
     width: 1000px;
     height: 500px;
     resize: none;
+}
+
+#resultsdiv {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     text-align: justify-all;
 }
 
 body {
     background-color: #3498db;
+}
+
+.button-blue {
+    width: 100px;
+    height: 30px;
+    float: left;
+    border: none;
+    cursor: pointer;
+    background-color: #3498db;
+    color: black;
+    margin-left: 20px;
 }
